--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +40,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "18.7.2",
+        "@types/react": "18.0.17",
+        "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+        "eslint": "8.9.0",
+        "eslint-config-airbnb": "18.2.1",
+        "eslint-config-next": "12.2.5",
+        "eslint-config-prettier": "8.4.0",
+        "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-prettier": "4.0.0",
+        "eslint-plugin-react": "7.27.0",
+        "eslint-plugin-security": "1.4.0",
+        "eslint-plugin-simple-import-sort": "7.0.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "prettier": "2.5.1"
   }
 }
